# zpr-project

./: .gitignore  CMakeLists.txt  Makefile  README.md  doxyfile
.github/workflows/: c-cpp.yml
cmake/Modules/: FindDoxy.cmake  FindSSH.cmake  FindTest.cmake
configure/: linux.sh  macos.sh
include/zpr_sync/: Connection.h  Directory.h  File.h  HostMachine.h  InputArgParser.h  LocalMachine.h  Logging.h  Machine.h  SyncSession.h
src/: main.cc
src/zpr_sync/: Connection.cc  Directory.cc  File.cc  HostMachine.cc  InputArgParser.cc  LocalMachine.cc  Logging.cc  Machine.cc  SyncSession.cc
test/: test-file-structure.cc  test-logging.cc  test-machine.cc  test-test.cc
